绪论研究现状

--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -373,7 +373,7 @@
 @Article{曹净2014基于,
   author  = {曹净 and 丁文云 and 赵党书 and 宋志刚 and 刘海明},
   title   = {基于 LSSVM-ARMA 模型的基坑变形时间序列预测},
-  journal = {Rock and Soil Mechanics},
+  journal = {岩土力学},
   year    = {2014},
   lang    = {zh},
   pinyin  = {caojingdingwenyunzhaodangshusongzhigang},
@@ -389,6 +389,470 @@
   pages   = {3306--3312},
   lang    = {zh},
   pinyin  = {wenmingzhangdinglifangqianzhangliangyi},
+}
+
+@Article{rosenbaum1986creating,
+  author    = {Rosenbaum, MS and Warren, CD},
+  title     = {Creating a geological database for planning tunnels under London},
+  journal   = {Quarterly Journal of Engineering Geology and Hydrogeology},
+  year      = {1986},
+  volume    = {19},
+  number    = {4},
+  pages     = {413--423},
+  publisher = {Geological Society of London},
+}
+
+@InProceedings{baffour2002developing,
+  author    = {Baffour, R and Abatan, A},
+  title     = {Developing an underground infrastructure management system using GPR, GPS and GIS},
+  booktitle = {Proc., IASTED Int. Conf., ACTA Press, Calgary, Alta., Canada},
+  year      = {2002},
+}
+
+@Article{chang2004development,
+  author    = {Chang, Yoon-Seop and Park, Hyeong-Dong},
+  title     = {Development of a web-based geographic information system for the management of borehole and geological data},
+  journal   = {Computers \& Geosciences},
+  year      = {2004},
+  volume    = {30},
+  number    = {8},
+  pages     = {887--897},
+  publisher = {Elsevier},
+}
+
+@Article{yoo2007tunneling,
+  author    = {Yoo, Chungsik and Kim, Joo-Mi},
+  title     = {Tunneling performance prediction using an integrated GIS and neural network},
+  journal   = {Computers and Geotechnics},
+  year      = {2007},
+  volume    = {34},
+  number    = {1},
+  pages     = {19--30},
+  publisher = {Elsevier},
+}
+
+@Article{yuan2012study,
+  author    = {Yuan, Changfeng and Wang, Xuchun and Wang, Ning and Zhao, Qianqian},
+  title     = {Study on the Effect of Tunnel Excavation on Surface Subsidence Based on GIS Data Management},
+  journal   = {Procedia Environmental Sciences},
+  year      = {2012},
+  volume    = {12},
+  pages     = {1387--1392},
+  publisher = {Elsevier},
+}
+
+@Article{li2013development,
+  author    = {Li, Xiaojun and Zhu, Hehua},
+  title     = {Development of a web-based information system for shield tunnel construction projects},
+  journal   = {Tunnelling and Underground Space Technology},
+  year      = {2013},
+  volume    = {37},
+  pages     = {146--156},
+  publisher = {Elsevier},
+}
+
+@Article{解福奇2009时态,
+  author    = {解福奇 and 朱合华 and 李晓军 and 孙雪兵},
+  title     = {时态 GIS 数据模型及其在隧道工程中的应用},
+  journal   = {地下空間與工程學報},
+  year      = {2009},
+  volume    = {5},
+  number    = {3},
+  pages     = {546--552},
+  lang      = {zh},
+  pinyin    = {xiefujianzhuhehualixiaojunsunxuebin},
+  publisher = {重慶大學期刊社},
+}
+
+@Article{刘振平20173d,
+  author  = {刘振平 and 刘建 and 何雨微 and 贺怀建 and 卞康},
+  title   = {3D GIS 与有限元模拟无缝耦合方法及其在隧道工程中的应用研究},
+  journal = {岩土力学},
+  year    = {2017},
+  volume  = {38},
+  number  = {3},
+  pages   = {866--874},
+  lang    = {zh},
+  pinyin  = {liuzhenpingliujianheyuweihehuaijian},
+}
+
+@Article{motamedi2009lifecycle,
+  author  = {Motamedi, Ali and Hammad, Amin},
+  title   = {Lifecycle management of facilities components using radio frequency identification and building information model},
+  journal = {Journal of Information Technology in Construction (ITcon)},
+  year    = {2009},
+  volume  = {14},
+  number  = {18},
+  pages   = {238--262},
+}
+
+@Article{zhang2013building,
+  author    = {Zhang, Sijie and Teizer, Jochen and Lee, Jin-Kook and Eastman, Charles M and Venugopal, Manu},
+  title     = {Building information modeling (BIM) and safety: Automatic safety checking of construction models and schedules},
+  journal   = {Automation in Construction},
+  year      = {2013},
+  volume    = {29},
+  pages     = {183--195},
+  publisher = {Elsevier},
+}
+
+@Article{于金勇2013bim,
+  author  = {于金勇 and 林敏},
+  title   = {BIM 技术在地铁安装工程中的应用},
+  journal = {土木建筑工程信息技术},
+  year    = {2013},
+  number  = {2},
+  lang    = {zh},
+  pinyin  = {yujinyonglinmin},
+}
+
+@Article{王慧琛2013bim,
+  author  = {王慧琛 and 李炎锋 and 赵雪锋 and 张晋},
+  title   = {BIM 技术在地下建筑建造中的应用研究——以地铁车站为例},
+  journal = {中国科技信息},
+  year    = {2013},
+  number  = {15},
+  pages   = {72--73},
+  lang    = {zh},
+  pinyin  = {wanghuichenliyanfengzhaoxuefengzhangjin},
+}
+
+@Article{李德超2012bim,
+  author  = {李德超 and 张瑞芝},
+  title   = {BIM 技术在数字城市三维建模中的应用研究},
+  journal = {土木建筑工程信息技术},
+  year    = {2012},
+  number  = {1},
+  pages   = {47--51},
+  lang    = {zh},
+  pinyin  = {lidechaozhangruizhi},
+}
+
+@InProceedings{yabuki2013development,
+  author    = {Yabuki, Nobuyoshi and Aruga, Takashi and Furuya, Hiroshi},
+  title     = {Development and application of a product model for shield tunnels},
+  booktitle = {Proc. of the 30th International Symposium on Automation and Robotics in Construction, Montr{\'e}al, Canada},
+  year      = {2013},
+}
+
+@InCollection{borrmann2013multi,
+  author    = {Borrmann, ANDR{\'E} and Jubierre, JAVIER},
+  title     = {A multi-scale tunnel product model providing coherent geometry and semantics},
+  booktitle = {Computing in Civil Engineering (2013)},
+  year      = {2013},
+  pages     = {291--298},
+}
+
+@PhdThesis{林浩2016基于,
+  author = {林浩},
+  title  = {基于IFC的盾构隧道结构全寿命周期信息模型研究与应用},
+  school = {同济大学},
+  year   = {2016},
+  lang   = {zh},
+  pages  = {1-151},
+  pinyin = {linhao},
+}
+
+@Article{朱合华2007数字地下空间与工程,
+  author  = {朱合华 and 李晓军},
+  title   = {数字地下空间与工程},
+  journal = {岩石力学与工程学报},
+  year    = {2007},
+  volume  = {26},
+  number  = {11},
+  pages   = {2277--2288},
+  lang    = {zh},
+  pinyin  = {zhuhehualixiaojun},
+}
+
+@Article{李晓军2009盾构隧道数字化研究与应用,
+  author  = {李晓军 and 朱合华 and 郑路},
+  title   = {盾构隧道数字化研究与应用},
+  journal = {岩土工程学报},
+  year    = {2009},
+  volume  = {31},
+  number  = {9},
+  pages   = {1456--1461},
+  lang    = {zh},
+  pinyin  = {lixiaojunzhuhehuazhenglu},
+}
+
+@Misc{IBM2008Wisdom,
+  author = {IBM},
+  title  = {Wisdom of the earth},
+  year   = {2008},
+  url    = {http://wisdomoftheearth.com},
+}
+
+@Article{巫细波2010智慧城市理念与未来城市发展,
+  author  = {巫细波 and 杨再高},
+  title   = {智慧城市理念与未来城市发展},
+  journal = {城市发展研究},
+  year    = {2010},
+  volume  = {11},
+  number  = {17},
+  pages   = {40--60},
+  lang    = {zh},
+  pinyin  = {wuxiboyangzaigao},
+}
+
+@Article{李德仁2013智慧城市的概念,
+  author  = {李德仁 and 姚远 and 邵振峰},
+  title   = {智慧城市的概念, 支撑技术及应用},
+  journal = {工程研究: 跨学科视野中的工程},
+  year    = {2013},
+  volume  = {4},
+  number  = {4},
+  pages   = {313--323},
+  lang    = {zh},
+  pinyin  = {liderenyaoyuanshaozhenfeng},
+}
+
+@Article{treasury2011national,
+  author  = {Treasury, Her Majesty’s},
+  title   = {National infrastructure plan 2011},
+  journal = {Infrastructure UK, UK Treasury Department (HM Treasury), http://cdn. hm-treasury. gov. uk/national\_infrastructure\_plan291111. pdf},
+  year    = {2011},
+}
+
+@Misc{CSIC2011Cambridge,
+  author = {CSIC},
+  title  = {Cambridge Centre for Smart Infrastructure and Construction},
+  year   = {2011},
+  url    = {http://www-smartinfrastructure.eng.cam.ac.uk},
+}
+
+@Article{朱合华2015基础设施建养一体数字化技术,
+  author  = {朱合华 and 李晓军 and 陈雪琴},
+  title   = {基础设施建养一体数字化技术 (1)——理论与方法},
+  journal = {土木工程学报},
+  year    = {2015},
+  number  = {4},
+  pages   = {99--110},
+  lang    = {zh},
+  pinyin  = {zhuhehualixiaojunchenxueqin},
+}
+
+@Article{朱合华2018智慧基础设施,
+  author  = {朱合华 and 李晓军 and 林晓东},
+  title   = {基础设施智慧服务系统（iS3）及其应用},
+  journal = {土木工程学报},
+  year    = {2018},
+  number  = {?},
+  pages   = {??--??},
+  lang    = {zh},
+  pinyin  = {zhuhehualixiaojunlinxiaodong},
+}
+
+@Article{yuan2013predictive,
+  author    = {Yuan, Yong and Jiang, Xiaomo and Liu, Xian},
+  title     = {Predictive maintenance of shield tunnels},
+  journal   = {Tunnelling and Underground Space Technology},
+  year      = {2013},
+  volume    = {38},
+  pages     = {69--86},
+  publisher = {Elsevier},
+}
+
+@Article{叶耀东2007软土地铁运营隧道病害现状及成因分析,
+  author  = {叶耀东 and 朱合华 and 王如路},
+  title   = {软土地铁运营隧道病害现状及成因分析},
+  journal = {地下空间与工程学报},
+  year    = {2007},
+  volume  = {3},
+  number  = {1},
+  pages   = {157--160},
+  lang    = {zh},
+  pinyin  = {yeyaodongzhuhehuawangrulu},
+}
+
+@PhdThesis{戴胜2008越江盾构隧道耐久性分析与评估体系研究,
+  author = {戴胜},
+  title  = {越江盾构隧道耐久性分析与评估体系研究},
+  school = {万方数据资源系统},
+  year   = {2008},
+  lang   = {zh},
+  pinyin = {daisheng},
+}
+
+@Article{李晓英2008铁路隧道健康状态模糊评价体系研究,
+  author  = {李晓英 and 彭立敏 and 黄娟},
+  title   = {铁路隧道健康状态模糊评价体系研究},
+  journal = {采矿技术},
+  year    = {2008},
+  number  = {5},
+  pages   = {54--56},
+  lang    = {zh},
+  pinyin  = {lixiaoyingpengliminhuangjuan},
+}
+
+@PhdThesis{段怀志2009隧道及地下工程健康评估研究,
+  author = {段怀志},
+  title  = {隧道及地下工程健康评估研究},
+  school = {重庆交通大学},
+  year   = {2009},
+  lang   = {zh},
+  pinyin = {duanhuaizhi},
+}
+
+@PhdThesis{张素磊2012隧道衬砌结构健康诊断及技术状况评定研究,
+  author = {张素磊},
+  title  = {隧道衬砌结构健康诊断及技术状况评定研究},
+  school = {北京: 北京交通大学},
+  year   = {2012},
+  lang   = {zh},
+  pinyin = {zhangsulei},
+}
+
+@Article{rao2016fuzzy,
+  author    = {Rao, Jun-ying and Xie, Tao and Liu, Yuan-ming},
+  title     = {Fuzzy evaluation model for in-service karst highway tunnel structural safety},
+  journal   = {KSCE Journal of Civil Engineering},
+  year      = {2016},
+  volume    = {20},
+  number    = {4},
+  pages     = {1242--1249},
+  publisher = {Springer},
+}
+
+@Book{saaty2012models,
+  title     = {Models, methods, concepts \& applications of the analytic hierarchy process},
+  publisher = {Springer Science \& Business Media},
+  year      = {2012},
+  author    = {Saaty, Thomas L and Vargas, Luis G},
+  volume    = {175},
+}
+
+@Article{张厚美2000圆形隧道装配式衬砌接头刚度模型研究,
+  author  = {张厚美 and 过迟 and 付德明},
+  title   = {圆形隧道装配式衬砌接头刚度模型研究},
+  journal = {岩土工程学报},
+  year    = {2000},
+  volume  = {22},
+  number  = {3},
+  pages   = {309--313},
+  lang    = {zh},
+  pinyin  = {zhanghoumeiguochifudeming},
+}
+
+@Article{曾东洋2005地铁盾构隧道管片接头刚度影响因素研究,
+  author  = {曾东洋 and 何川},
+  title   = {地铁盾构隧道管片接头刚度影响因素研究},
+  journal = {铁道学报},
+  year    = {2005},
+  volume  = {27},
+  number  = {4},
+  pages   = {90--95},
+  lang    = {zh},
+  pinyin  = {zengdongyanghechuan},
+}
+
+@Article{chen2009numerical,
+  author    = {Chen, JS and Mo, HH},
+  title     = {Numerical study on crack problems in segments of shield tunnel using finite element method},
+  journal   = {Tunnelling and underground space technology},
+  year      = {2009},
+  volume    = {24},
+  number    = {1},
+  pages     = {91--102},
+  publisher = {Elsevier},
+}
+
+@Article{王如路2009上海软土地铁隧道变形影响因素及变形特征分析,
+  author  = {王如路},
+  title   = {上海软土地铁隧道变形影响因素及变形特征分析},
+  journal = {地下工程与隧道},
+  year    = {2009},
+  number  = {1},
+  pages   = {1--6},
+  lang    = {zh},
+  pinyin  = {wangrulu},
+}
+
+@Article{李喆2005相邻隧道施工对上海地铁二号线的影响分析,
+  author  = {李喆 and 张子新},
+  title   = {相邻隧道施工对上海地铁二号线的影响分析},
+  journal = {Chinese Journal of Rock Mechanics and Engineering},
+  year    = {2005},
+  lang    = {zh},
+  pinyin  = {lizhezhangzixin},
+}
+
+@Article{刘燕萍2010时间序列分析在建筑物变形监测中的应用,
+  author  = {刘燕萍 and 贾东峰 and 程效军},
+  title   = {时间序列分析在建筑物变形监测中的应用},
+  journal = {勘察科学技术},
+  year    = {2010},
+  number  = {6},
+  pages   = {46--49},
+  lang    = {zh},
+  pinyin  = {liuyanpingjiadongfengchenxiaojun},
+}
+
+@MastersThesis{卢宏彬2016基于时间序列的结构损伤概率方法研究,
+  author = {卢宏彬},
+  title  = {基于时间序列的结构损伤概率方法研究},
+  school = {华南理工大学},
+  year   = {2016},
+  lang   = {zh},
+  pages  = {1-94},
+  pinyin = {luhongbin},
+}
+
+@Article{tran2008prediction,
+  author    = {Tran, DH and Ng, Anne Wai Man and Mcmanus, KJ and Burn, Stewart},
+  title     = {Prediction models for serviceability deterioration of stormwater pipes},
+  journal   = {Structure and Infrastructure Engineering},
+  year      = {2008},
+  volume    = {4},
+  number    = {4},
+  pages     = {287--295},
+  publisher = {Taylor \& Francis},
+}
+
+@Article{abaza2009predicting,
+  author    = {Abaza, Khaled and Murad, Maher},
+  title     = {Predicting remaining strength of flexible pavement and overlay design thickness with stochastic modeling},
+  journal   = {Transportation Research Record: Journal of the Transportation Research Board},
+  year      = {2009},
+  number    = {2094},
+  pages     = {62--70},
+  publisher = {Transportation Research Board of the National Academies},
+}
+
+@Article{tsuda2006estimating,
+  author    = {TSUDA, Yoshitane and KAITO, Kiyoyuki and AOKI, Kazuya and KOBAYASHI, Kiyoshi},
+  title     = {Estimating Markovian transition probabilities for bridge deterioration forecasting},
+  journal   = {Structural Engineering/Earthquake Engineering},
+  year      = {2006},
+  volume    = {23},
+  number    = {2},
+  pages     = {241s--256s},
+  publisher = {Japan Society of Civil Engineers},
+}
+
+@Article{mahdevari2012prediction,
+  author    = {Mahdevari, Satar and Torabi, Seyed Rahman},
+  title     = {Prediction of tunnel convergence using artificial neural networks},
+  journal   = {Tunnelling and Underground Space Technology},
+  year      = {2012},
+  volume    = {28},
+  pages     = {218--228},
+  publisher = {Elsevier},
+}
+
+@Article{saito1991delphi,
+  author    = {Saito, Mitsuru and Sinha, Kumares C},
+  title     = {Delphi study on bridge condition rating and effects of improvements},
+  journal   = {Journal of Transportation Engineering},
+  year      = {1991},
+  volume    = {117},
+  number    = {3},
+  pages     = {320--334},
+  publisher = {American Society of Civil Engineers},
+}
+
+@Article{,
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
