--- a/tex/Chap2.tex
+++ b/tex/Chap2.tex
@@ -1,9 +1,12 @@
 %!TEX root = ../thesis.tex
 \chapter{盾构隧道服役性能评估方法}
-\label{chap:TSI}
+
+在道路工程领域，同样有对结构服役性能评估的需求，服役性能的影响因素很多，从机理方面研究的出一个综合性的服役性能指标是件困难的事，以往的研究经验表明（Saito和Sinha，\citeyear{saito1991delphi}；Kushida等，\citeyear{kushida1997development}），专家打分在实际工程中是可操作性强、效率高的方法。
+
+早在二十世纪六十年代，美国国家公路协会（American Association of State Highway Officials，AASHO）选定了伊利诺伊州、印第安纳州和明尼苏达州的72个沥青混凝土公路段和54个水泥混凝土公路段，组织行业专家对所选的路段进行乘车体验和路面观察，之后根据体验和观察结果对公路对进行服役性能打分，评估等级取值为1-5，其中1表示很差，2表示差，3表示一般，4表示好，5表示很好。与此同时，测量和收集与公路服役性能相关的指标，包括路面平整度、
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{盾构隧道服役性能概述}
+\section{盾构隧道服役性能定义与假设}
 
 正文
 
@@ -11,7 +14,16 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{服役性能评估指标体系}
+\section{数据采集与处理}
+
+正文
+
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{盾构隧道服役性能评估指标}
 
 正文
 
@@ -19,30 +31,29 @@
 
 
 %+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++%
-\subsection{变形指标}
+\subsection{沉降}
 
 
 
 
 
 %+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++%
-\subsection{病害指标}
+\subsection{收敛}
+
+
+
+
+
+%+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++%
+\subsection{病害}
+
 
 
 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{服役性能评估指标体系}
-
-正文
-
-
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{服役性能评估方法}
+\section{盾构隧道服役性能评估方法}
 
 正文
 
