病害数据采集

--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -852,7 +852,94 @@
   publisher = {American Society of Civil Engineers},
 }
 
-@Article{,
+@Article{kushida1997development,
+  author    = {Kushida, Moriyoshi and Miyamoto, Ayaho and Kinoshita, Kazuya},
+  title     = {Development of concrete bridge rating prototype expert system with machine learning},
+  journal   = {Journal of computing in civil engineering},
+  year      = {1997},
+  volume    = {11},
+  number    = {4},
+  pages     = {238--247},
+  publisher = {American Society of Civil Engineers},
+}
+
+@Book{AASHO1962the,
+  title     = {The AASHO Roads Test: Pavement research. Report 5},
+  publisher = {National Academy of Sciences-National Research Council},
+  year      = {1962},
+  author    = {AASHO},
+  address   = {US},
+}
+
+@Article{liu1996new,
+  author    = {Liu, Chiu and Herman, Robert},
+  title     = {New approach to roadway performance indices},
+  journal   = {Journal of transportation engineering},
+  year      = {1996},
+  volume    = {122},
+  number    = {5},
+  pages     = {329--336},
+  publisher = {American Society of Civil Engineers},
+}
+
+@Article{astm20096433,
+  author  = {ASTM, D},
+  title   = {6433-07 Standard Practice for Roads and Parking Lots Pavement Condition Index Surveys},
+  journal = {ASTM International, West Conshohocken, Pennsylvania},
+  year    = {2009},
+}
+
+@Article{gharaibeh2009assessing,
+  author    = {Gharaibeh, Nasir G and Zou, Yajie and Saliminejad, Siamak},
+  title     = {Assessing the agreement among pavement condition indexes},
+  journal   = {Journal of Transportation Engineering},
+  year      = {2009},
+  volume    = {136},
+  number    = {8},
+  pages     = {765--772},
+  publisher = {American Society of Civil Engineers},
+}
+
+@PhdThesis{ramaswamy1989estimation,
+  author = {Ramaswamy, Rohit},
+  title  = {Estimation of latent pavement performance from damage measurements},
+  school = {Massachusetts Institute of Technology},
+  year   = {1989},
+}
+
+@Article{程姝菲2014盾构隧道长期渗漏水检测新方法,
+  author  = {程姝菲 and 黄宏伟},
+  title   = {盾构隧道长期渗漏水检测新方法},
+  journal = {地下空间与工程学报},
+  year    = {2014},
+  volume  = {10},
+  number  = {3},
+  pages   = {733--738},
+  lang    = {zh},
+  pinyin  = {chengzhufeihuanghongwei},
+}
+
+@Article{何斌2013地下隧道变形检测的无线倾角传感器,
+  author  = {何斌 and 纪云 and 沈润杰},
+  title   = {地下隧道变形检测的无线倾角传感器},
+  journal = {光学 精密工程},
+  year    = {2013},
+  volume  = {21},
+  number  = {6},
+  lang    = {zh},
+  pinyin  = {hebinjiyunshenrunjie},
+}
+
+@Article{李家平2016基于盾构隧道激光扫描点云的收敛直径定点计算方法,
+  author    = {李家平 and 卢中贺 and others},
+  title     = {基于盾构隧道激光扫描点云的收敛直径定点计算方法},
+  journal   = {工程勘察},
+  year      = {2016},
+  number    = {2016 年 12},
+  pages     = {52--55},
+  lang      = {zh},
+  pinyin    = {lijiapingluzhonghe},
+  publisher = {中国建筑学会工程勘察分会},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
